@@ -3,6 +3,13 @@
 	* ipmipower/ipmipower.8.in: Fix text.
 
 	* ipmiconsole/ipmiconsole.8.in: Fix some text.
+
+	* ipmimonitoring/src/libipmimonitoring/libipmimonitoring.c
+	(ipmi_monitoring_bitmask_string): Fix corner case.
+
+	* ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c
+	(_ipmimonitoring): Fix corner case.  Output strings output for
+	bitmask readings.
 	
 2007-04-28  Albert Chu <chu11@llnl.gov>
 
